I created the layout for the website and build out the homepage for the website.

--- a/src/stylesheets/normal.less
+++ b/src/stylesheets/normal.less
@@ -11,4 +11,18 @@
  */
 
 @import "../../lib/twitter-bootstrap/less/bootstrap.less";
+
+body {
+    padding-top: 50px;
+}
+
 @import "../../lib/twitter-bootstrap/less/responsive.less";
+
+@iconSpritePath: 'images/glyphicons-halflings.png';
+@iconSpritePathWhite: 'images/glyphicons-halflings-white.png';
+
+footer {
+    margin-top: 10px;
+    padding-top: 10px;
+    border-top: 1px solid #ccc;
+}
