--- a/_includes/navigation_bar.html
+++ b/_includes/navigation_bar.html
@@ -1,3 +1,9 @@
+{% if page.url == '/index.html' %}
+{% assign homeClass = 'active' %}
+{% elsif page.url contains '/blog/' %}
+{% assign blogClass = 'active' %}
+{% endif %}
+
 <nav class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
@@ -9,7 +15,11 @@
             <a class="brand" href="/">{{site.brand}}</a>
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class="active"><a href="/">Home</a></li>
+                    <li class="{{homeClass}}"><a href="/">Home</a></li>
+                    <li class="{{blogClass}}"><a href="/blog">Blog</a></li>
+                </ul>
+                <ul class="nav pull-right">
+                    <li><a href="https://github.com/mfcollins3">GitHub</a></li>
                 </ul>
             </div>
         </div>
