--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Michael Collins on GitHub</title>
+        <title>{{page.title}} - Michael Collins on GitHub</title>
         <link rel="stylesheet" href="/css/{{site.theme}}.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         {% include google_analytics.html %}
@@ -12,9 +12,7 @@
             {{content}}
         </div>
         {% include footer.html %}
-        <script type="text/javascript" src="/javascript/website.js"></script>
-        {% if page.script %}
-            {{page.script}}
-        {% endif %}
+        {% include javascript.html %}
+        {% include disqus_comment_count_javascript.html %}
     </body>
 </html>
