--- a/src/stylesheets/normal.less
+++ b/src/stylesheets/normal.less
@@ -24,5 +24,12 @@ body {
 footer {
     margin-top: 10px;
     padding-top: 10px;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid @grayLighter;
+}
+
+article #description {
+    border-bottom: 1px solid @grayLighter;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    font-style: italic;
 }
