--- a/_includes/disqus_thread.html
+++ b/_includes/disqus_thread.html
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'mfcollins3';
-    var disqus_developer = 1;
+    //var disqus_developer = 1;
     var disqus_url = 'http://mfcollins3.github.com{{page.url}}';
     var disqus_title = '{{page.title}}';
     var disqus_identifier = '{{page.disqus_identifier}}';
