I fixed layout issues around posts. I added a category and tags to the new post.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,8 @@
         <title>{{page.title}} - Michael Collins on GitHub</title>
         <link rel="stylesheet" href="/css/{{site.theme}}.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="description" content="{{page.description}}"/>
+        <meta name="author" content="Michael F. Collins, III"/>
         {% include google_analytics.html %}
     </head>
     <body>
