--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@
     <head>
         <title>{{page.title}} - Michael Collins on GitHub</title>
         <link rel="stylesheet" href="/css/{{site.theme}}.css"/>
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="description" content="{{page.description}}"/>
         <meta name="author" content="Michael F. Collins, III"/>
