--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,6 +1,4 @@
 <script type="text/javascript" src="/javascript/website.js"></script>
-{% if page.script %}
-    <script type="text/javascript">
-        {{page.script}}
-    </script>
+{% if page.javascript %}
+    <script type="text/javascript" src="{{page.javascript}}"></script>
 {% endif %}
