I updated the Disqus settings for the new domain name.

--- a/_includes/disqus_thread.html
+++ b/_includes/disqus_thread.html
@@ -2,7 +2,7 @@
 <script type="text/javascript">
     var disqus_shortname = 'mfcollins3';
     //var disqus_developer = 1;
-    var disqus_url = 'http://mfcollins3.github.com{{page.url}}';
+    var disqus_url = 'http://www.michaelfcollins3.me{{page.url}}';
     var disqus_title = '{{page.title}}';
     var disqus_identifier = '{{page.disqus_identifier}}';
 
