I fixed the site title in the page layouts.

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{page.title}} - Michael Collins on GitHub</title>
+    <title>{{page.title}} - {{site.brand}}</title>
     <link rel="stylesheet" href="/css/{{site.theme}}.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     {% include google_analytics.html %}
