--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         {% include google_analytics.html %}
     </head>
     <body>
+        {% include page_header.html %}
         {% include navigation_bar.html %}
         <div class="container">
             {{content}}
