I integrated Font Awesome into the website.
I integrated the Font Awesome icons into the normal theme of the
website to make them available to be used in the web pages.

--- a/src/themes/normal.less
+++ b/src/themes/normal.less
@@ -21,6 +21,9 @@ body {
 @iconSpritePath: 'images/glyphicons-halflings.png';
 @iconSpritePathWhite: 'images/glyphicons-halflings-white.png';
 
+@import "./lib/font-awesome/less/font-awesome.less";
+@FontAwesomePath: 'fonts';
+
 footer {
     margin-top: 20px;
     padding-top: 10px;
