I modified the RSS feed format. I created the category files for Windows Azure topics.
I created the category page and RSS feed for Windows Azure topics. I
updated the information in the RSS feed for the website.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,11 @@
     <head>
         <title>{{page.title}} - {{site.brand}}</title>
         <link rel="stylesheet" href="/css/{{site.theme}}.css"/>
+        {% if page.category %}
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="/blog/{{page.category}}/rss.xml"/>
+        {% else %}
         <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml"/>
+        {% endif %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         {% include google_analytics.html %}
     </head>
