--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -89,6 +89,7 @@
 					<ul>
 						<li><a href="#">iOS</a></li>
 						<li><a href="#">WCF</a></li>
+						<li><a href="/blog/azure/index.html">Windows Azure</a></li>
 						<li><a href="#">Workflow Foundation</a></li>
 						<li><a href="#">WPF</a></li>
 						<li><a href="#">ZeroMQ</a></li>
