--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="span4">
+            <section id="footerLegalInformation" class="span4">
                 <p>Copyright &copy; 2012-2013 Michael F. Collins, III</p>
                 <p>
                     The views expressed on this website are mine alone and do
@@ -13,19 +13,18 @@
                     and can be reused for both open source and commercial
                     development.
                 </p>
-            </div>
-            <div class="span4">&nbsp;</div>
-            <div class="span4">
+            </section>
+            <section id="footerContactInformation" class="span4 offset4">
                 <address>
-                    <strong>Michael F. Collins, III</strong><br/>
-                    Website: <a href="http://mfcollins3.github.com">http://mfcollins3.github.com</a><br/>
-                    Website: <a href="http://www.michaelfcollins3.me">http://wwww.michaelfcollins3.me</a><br/>
-                    Email: <a href="mailto:michael@imaginaryrealities.com">michael@imaginaryrealities.com</a><br/>
-                    Email: <a href="mailto:michael.collins@neudesic.com">michael.collins@neudesic.com</a><br/>
-                    Twitter: <a href="http://www.twitter.com/mfcollins3">@mfcollins3</a><br/>
-                    Skype: <a href="skype:mfcollins3">mfcollins3</a><br/>
+                    <span>Michael F. Collins, III</span><br/>
+                    <span>Website: <a href="http://mfcollins3.github.com">http://mfcollins3.github.com</a></span><br/>
+                    <span>Website: <a href="http://www.michaelfcollins3.me">http://wwww.michaelfcollins3.me</a></span><br/>
+                    <span>Email: <a href="mailto:michael@imaginaryrealities.com">michael@imaginaryrealities.com</a></span><br/>
+                    <span>Email: <a href="mailto:michael.collins@neudesic.com">michael.collins@neudesic.com</a></span><br/>
+                    <span>Twitter: <a href="http://www.twitter.com/mfcollins3">@mfcollins3</a></span><br/>
+                    <span>Skype: <a href="skype:mfcollins3">mfcollins3</a></span><br/>
                 </address>
-            </div>
+            </section>
         </div>
     </div>
 </footer>
