--- a/src/themes/normal.less
+++ b/src/themes/normal.less
@@ -13,7 +13,7 @@
 @import "../../lib/twitter-bootstrap/less/bootstrap.less";
 
 body {
-    padding-top: @navbarHeight + 1;
+	padding-top: @navbarHeight + 1;	
 }
 
 @import "../../lib/twitter-bootstrap/less/responsive.less";
@@ -21,219 +21,45 @@ body {
 @iconSpritePath: 'images/glyphicons-halflings.png';
 @iconSpritePathWhite: 'images/glyphicons-halflings-white.png';
 
-@import "./lib/font-awesome/less/font-awesome.less";
+@import "../../lib/font-awesome/less/font-awesome.less";
 @FontAwesomePath: 'fonts';
 
-/* Pygments CSS classes */
-.hll { background-color: #ffffcc }
-.c { color: #408080; font-style: italic } /* Comment */
-.err { border: 1px solid #FF0000 } /* Error */
-.k { color: #008000; font-weight: bold } /* Keyword */
-.o { color: #666666 } /* Operator */
-.cm { color: #408080; font-style: italic } /* Comment.Multiline */
-.cp { color: #BC7A00 } /* Comment.Preproc */
-.c1 { color: #408080; font-style: italic } /* Comment.Single */
-.cs { color: #408080; font-style: italic } /* Comment.Special */
-.gd { color: #A00000 } /* Generic.Deleted */
-.ge { font-style: italic } /* Generic.Emph */
-.gr { color: #FF0000 } /* Generic.Error */
-.gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.gi { color: #00A000 } /* Generic.Inserted */
-.go { color: #808080 } /* Generic.Output */
-.gp { color: #000080; font-weight: bold } /* Generic.Prompt */
-.gs { font-weight: bold } /* Generic.Strong */
-.gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.gt { color: #0040D0 } /* Generic.Traceback */
-.kc { color: #008000; font-weight: bold } /* Keyword.Constant */
-.kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
-.kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
-.kp { color: #008000 } /* Keyword.Pseudo */
-.kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
-.kt { color: #B00040 } /* Keyword.Type */
-.m { color: #666666 } /* Literal.Number */
-.s { color: #BA2121 } /* Literal.String */
-.na { color: #7D9029 } /* Name.Attribute */
-.nb { color: #008000 } /* Name.Builtin */
-.nc { color: #0000FF; font-weight: bold } /* Name.Class */
-.no { color: #880000 } /* Name.Constant */
-.nd { color: #AA22FF } /* Name.Decorator */
-.ni { color: #999999; font-weight: bold } /* Name.Entity */
-.ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-.nf { color: #0000FF } /* Name.Function */
-.nl { color: #A0A000 } /* Name.Label */
-.nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
-.nt { color: #008000; font-weight: bold } /* Name.Tag */
-.nv { color: #19177C } /* Name.Variable */
-.ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
-.w { color: #bbbbbb } /* Text.Whitespace */
-.mf { color: #666666 } /* Literal.Number.Float */
-.mh { color: #666666 } /* Literal.Number.Hex */
-.mi { color: #666666 } /* Literal.Number.Integer */
-.mo { color: #666666 } /* Literal.Number.Oct */
-.sb { color: #BA2121 } /* Literal.String.Backtick */
-.sc { color: #BA2121 } /* Literal.String.Char */
-.sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
-.s2 { color: #BA2121 } /* Literal.String.Double */
-.se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
-.sh { color: #BA2121 } /* Literal.String.Heredoc */
-.si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
-.sx { color: #008000 } /* Literal.String.Other */
-.sr { color: #BB6688 } /* Literal.String.Regex */
-.s1 { color: #BA2121 } /* Literal.String.Single */
-.ss { color: #19177C } /* Literal.String.Symbol */
-.bp { color: #008000 } /* Name.Builtin.Pseudo */
-.vc { color: #19177C } /* Name.Variable.Class */
-.vg { color: #19177C } /* Name.Variable.Global */
-.vi { color: #19177C } /* Name.Variable.Instance */
-.il { color: #666666 } /* Literal.Number.Integer.Long */
+@import "pygments.less";
 
 @import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
 
-.navbar a {
+.jumbotron {
+	padding: 40px 0;
+	text-align: center;
+	background: #87ceeb;
+	color: white;
 	font-family: 'Architects Daughter', cursive;
 }
 
-#homepage {
-	> header {
-		#gradient .vertical(#87ceeb, white);
-		color: @gray;
-		font-family: 'Architects Daughter', @sansFontFamily;
-
-		> div {
-			.container-fixed();
-			width: (@gridColumnWidth * @gridColumns) + (@gridGutterWidth * (@gridColumns - 1));
-			text-align: center;
-			padding: 60px;
-			margin-bottom: 30px;
-			font-size: 18px;
-			font-weight: 200;
-			line-height: @baseLineHeight * 1.5;
-			
-			h1 {
-				font-size: 60px;
-				line-height: 1;
-				letter-spacing: -1px;
-			}
-
-			li {
-				line-height: @baseLineHeight * 1.5; // Reset since we specify in Type.less
-			}
-		}
-	}
-
-	#alerts {
-		.container-fixed();
-		width: (@gridColumnWidth * @gridColumns) + (@gridGutterWidth * (@gridColumns - 1));
-	}
-	
-	#blogFeatures {
-		.makeRow();
-	}
-
-	#featuredPost {
-		.makeColumn(8);
-	}
-
-	#featuredCategory {
-		.makeColumn(4);
-
-		h2 {
-			border-bottom: 1px solid @grayLighter;		
-		}
-
-		article h1 {
-			font-size: @baseFontSize * 1.75;
-		}
-	}
-
-	#featuredProjects {
-		.makeRow();
-		border-top: 1px solid @grayLighter;
-		display: none;
-	}
-
-	#featuredProject {
-		.makeColumn(10);
-
-		article {
-			.makeRow();
-
-			#projectSummary {
-				.makeColumn(8);
-			}
-
-			#projectLinks {
-				.makeColumn(2);
-			}
-		}
-	}
-
-	#otherProjects {
-		.makeColumn(2);
-	}
-
-	#content {
-		.makeRow();
-		border-top: 1px solid @grayLighter;
-	}
-
-	#categories {
-		.makeColumn(2);
-		padding-top: @baseLineHeight * 2;
-
-		ul li {
-			margin-top: @baseLineHeight / 2;
-		}
-
-		ul li:first-child {
-			margin-top: 0;
-		}
-	}
-
-	#recentPosts {
-		.makeColumn(7);
-
-		article h1 {
-			font-size: @baseFontSize * 1.75;
-		}
-	}
-
-	#news {
-		.makeColumn(3);
-	}
-
-	#events {
-		article {
-			h1 {
-				line-height: @baseLineHeight;
-				font-size: @baseFontSize;
-			}
-
-			.eventDate {
-				font-weight: bold;
-			}
-		}
-	}
-
-	.sectionTitle {
-		font-size: @baseFontSize;
-		line-height: @baseLineHeight;
-		margin-bottom: 0;
-		#gradient .horizontal(#87ceeb, white);
-	}
-
-	ul {
-		list-style: none;
-		margin-left: 0;
-	}
+.featuredSectionTitle {
+	font-size: @baseFontSize;
+	line-height: @baseLineHeight;
+	border-bottom: 1px solid @grayLighter;
 }
 
-#main {
-	.container-fixed();
-	width: (@gridColumnWidth * @gridColumns) + (@gridGutterWidth * (@gridColumns - 1));
+#categoryList {
+	padding-top: @baseLineHeight * 2;
+}
+
+#categoryList ul li {
+	margin-top: @baseLineHeight / 2;
+}
+
+#categoryList ul li:first-child {
+	margin-top: 0;
 }
 
 body > footer {
 	border-top: 1px solid @grayLighter;
+	margin-top: @baseLineHeight / 2;
 	padding-top: @baseLineHeight / 2;
+}
+
+#footerContactInformation address span:first-child {
+	font-weight: bold;
 }
