--- a/src/themes/normal.less
+++ b/src/themes/normal.less
@@ -28,30 +28,25 @@ body {
 
 @import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
 
-.jumbotron {
-	padding: 40px 0;
+#jumbotron {
+	background-color: #269;
+	background-image: linear-gradient(rgba(255,255,255,.2) 2px, transparent 2px), linear-gradient(90deg, rgba(255,255,255,.2) 2px, transparent 2px), linear-gradient(rgba(255,255,255,.1) 1px, transparent 1px), linear-gradient(90deg, rgba(255,255,255,.1) 1px, transparent 1px);
+	background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+	background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
+	height: 300px;
+}
+
+#jumbotron h1, #jumbotron p {
 	text-align: center;
-	background: #87ceeb;
 	color: white;
-	font-family: 'Architects Daughter', cursive;
 }
 
-.featuredSectionTitle {
-	font-size: @baseFontSize;
-	line-height: @baseLineHeight;
-	border-bottom: 1px solid @grayLighter;
+#jumbotron h1 {
+	margin-top: 90px;
 }
 
-#categoryList {
-	padding-top: @baseLineHeight * 2;
-}
-
-#categoryList ul li {
-	margin-top: @baseLineHeight / 2;
-}
-
-#categoryList ul li:first-child {
-	margin-top: 0;
+#jumbotron p {
+	margin: 20px 100px 100px 100px;
 }
 
 body > footer {
