I revised the post layout.
I added Open Graph metadata and Twitter Card metadata to the posts. I
changed the post layout. I added navigation links to the top and bottom
of the blog posts.

--- a/src/themes/normal.less
+++ b/src/themes/normal.less
@@ -42,11 +42,20 @@ body {
 }
 
 #jumbotron h1 {
-	margin-top: 90px;
+	margin-top: 100px;
 }
 
 #jumbotron p {
-	margin: 20px 100px 100px 100px;
+	margin: 20px 50px 100px 50px;
+}
+
+.post .lead {
+	border-bottom: 1px solid @grayLighter;
+	padding-bottom: 20px;
+}
+
+.post .author {
+	font-weight: bold
 }
 
 body > footer {
