--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,23 @@
         <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="description" content="{{page.description}}"/>
-        <meta name="author" content="Michael F. Collins, III"/>
+        <meta name="author" content="{{page.author}}"/>
+        <meta name="og:title" content="{{page.title}}"/>
+        <meta name="og:type" content="article"/>
+        <meta name="og:url" content="http://www.michaelfcollins3.me{{page.url}}"/>
+        <meta name="og:description" content="{{page.description}}"/>
+        <meta name="og:published_time" content="{{page.date | date:'%Y-%m-%d'}}"/>
+        {% if page.modifiedDate %}
+        <meta name="og:modified_time" content="{{page.modified_time | date:'%Y-%m-%d'}}"/>
+        {% endif %}
+        <meta name="og:author:first_name" content="{{page.author_first_name}}"/>
+        <meta name="og:author:last_name" content="{{page.author_last_name}}"/>
+        <meta name="og:author:gender" content="{{page.author_gender}}"/>
+        <meta name="twitter:card" content="summary"/>
+        <meta name="twitter:url" content="http://www.michaelfcollins3.me{{page.url}}"/>
+        <meta name="twitter:title" content="{{page.title}}"/>
+        <meta name="twitter:description" content="{{page.description}}"/>
+        <meta name="twitter:creator" content="@{{page.twitter_creator}}"/>
         {% include google_analytics.html %}
     </head>
     <body>
@@ -25,25 +41,17 @@
                         </li>
                         {% endfor %}
                     </ul>
-                    <article>
+                    {% include post_pager.html %}
+                    <article class="post">
                         <div class="page-header">
                             <h1>{{page.title}}</h1>
                         </div>
                         <p class="lead">{{page.description}}</p>
-                        <time datetime="{{page.date | date:'%Y-%m-%d'}}">{{page.date | date:'%B %d, %Y'}}</time>
+                        <p><span class="author">{{page.author}}</span><br/><time datetime="{{page.date | date:'%Y-%m-%d'}}">{{page.date | date:'%B %d, %Y'}}</time></p>
                         {{content}}
-                        <ul class="pager">
-                            {% unless page.previous %}
-                            {% assign previous_state = 'disabled' %}
-                            {% endunless %}
-                            {% unless page.next %}
-                            {% assign next_state = 'disabled' %}
-                            {% endunless %}
-                            <li class="previous {{previous_state}}"><a href="{{page.previous.url}}">&larr; Previous Post</a></li>
-                            <li class="next {{next_state}}"><a href="{{page.next.url}}">Next Post &rarr;</a></li>
-                        </ul>
-                        {% include disqus_thread.html %}
                     </article>
+                    {% include post_pager.html %}
+                    {% include disqus_thread.html %}
                 </div>
                 <div class="span3">
                     <section>
@@ -61,6 +69,10 @@
                             <li><a href="{{related_post.url}}">{{related_post.title}}</a></li>
                             {% endfor %}
                         </ul>
+                    </section>
+                    <section>
+                        <h2>Other Topics</h2>
+                        {% include category_list.html %}
                     </section>
                 </div>
             </div>
