I upgraded jQuery to 1.9.1. I added titles to the social media links on the navigation bar.

--- a/_includes/navigation_bar.html
+++ b/_includes/navigation_bar.html
@@ -34,13 +34,13 @@
                 </ul>
                 <p class="navbar-text hidden-desktop">Contact Me:</p>
                 <ul id="socialMediaLinks" class="nav pull-right">
-                    <li><a href="https://github.com/mfcollins3"><span class="socialMediaIcon icon-github hidden-phone hidden-tablet"></span><span class="hidden-desktop">GitHub</span></a></li>
-                    <li><a href="https://www.facebook.com/mfcollins3"><span class="socialMediaIcon icon-facebook hidden-phone hidden-tablet"></span><span class="hidden-desktop">Facebook</span></a></li>
-                    <li><a href="http://twitter.com/mfcollins3"><span class="socialMediaIcon icon-twitter hidden-phone hidden-tablet"></span><span class="hidden-desktop">Twitter</span></a></li>
-                    <li><a href="http://www.linkedin.com/in/michaelfcollins3/"><span class="socialMediaIcon icon-linkedin hidden-phone hidden-tablet"></span><span class="hidden-desktop">LinkedIn</span></a></li>
-                    <li><a href="https://plus.google.com/108671264811803826632/"><span class="socialMediaIcon icon-google-plus hidden-phone hidden-tablet"></span><span class="hidden-desktop">Google+</span></a></li>
-                    <li><a href="http://pinterest.com/mfcollins3/"><span class="socialMediaIcon icon-pinterest hidden-phone hidden-tablet"></span><span class="hidden-desktop">Pinterest</span></a></li>
-                    <li><a href="skype:mfcollins3"><span class="socialMediaIcon icon-phone hidden-phone hidden-tablet"></span><span class="hidden-desktop">Skype</span></a></li>
+                    <li><a href="https://github.com/mfcollins3" title="GitHub"><span class="socialMediaIcon icon-github hidden-phone hidden-tablet"></span><span class="hidden-desktop">GitHub</span></a></li>
+                    <li><a href="https://www.facebook.com/mfcollins3" title="Facebook"><span class="socialMediaIcon icon-facebook hidden-phone hidden-tablet"></span><span class="hidden-desktop">Facebook</span></a></li>
+                    <li><a href="http://twitter.com/mfcollins3" title="Twitter"><span class="socialMediaIcon icon-twitter hidden-phone hidden-tablet"></span><span class="hidden-desktop">Twitter</span></a></li>
+                    <li><a href="http://www.linkedin.com/in/michaelfcollins3/" title="LinkedIn"><span class="socialMediaIcon icon-linkedin hidden-phone hidden-tablet"></span><span class="hidden-desktop">LinkedIn</span></a></li>
+                    <li><a href="https://plus.google.com/108671264811803826632/" title="Google+"><span class="socialMediaIcon icon-google-plus hidden-phone hidden-tablet"></span><span class="hidden-desktop">Google+</span></a></li>
+                    <li><a href="http://pinterest.com/mfcollins3/" title="Pinterest"><span class="socialMediaIcon icon-pinterest hidden-phone hidden-tablet"></span><span class="hidden-desktop">Pinterest</span></a></li>
+                    <li><a href="skype:mfcollins3" title="Skype"><span class="socialMediaIcon icon-phone hidden-phone hidden-tablet"></span><span class="hidden-desktop">Skype</span></a></li>
                 </ul>
             </div>
         </div>
