I created the category pages.
I created summary pages for the categories. I updated the posts with
categories that were missing them.

--- a/_includes/category_list.html
+++ b/_includes/category_list.html
@@ -1,5 +1,9 @@
 <ul>
-	<li><a href="/blogs/Command_Line_Programming.html">Command Line Programming</a></li>
-	<li><a href="/blogs/Neuron_ESB.html">Neuron ESB</a></li>
-	<li><a href="/blogs/ZeroMQ.html">ZeroMQ</a></li>
+	<li><a href="/blog/Command_Line_Programming.html">Command Line Programming</a></li>
+	<li><a href="/blog/Git.html">Git</a></li>
+	<li><a href="/blog/iOS.html">iOS Development</a></li>
+	<li><a href="/blog/Neuron_ESB.html">Neuron ESB</a></li>
+	<li><a href="/blog/Software_Development.html">Software Development</a></li>
+	<li><a href="/blog/Windows_Communication_Foundation.html">Windows Communication Foundation</a></li>
+	<li><a href="/blog/ZeroMQ.html">ZeroMQ</a></li>
 </ul>
