--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -4,6 +4,10 @@
     <title>{{page.title}} - {{site.brand}}</title>
     <link rel="stylesheet" href="/css/{{site.theme}}.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    {% if page.rss %}
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{page.rss}}"/>
+    {% endif %}
+    <meta name="description" content="{{page.description}}"/>
     {% include google_analytics.html %}
 </head>
 <body>
@@ -12,6 +16,7 @@
     <div class="page-header">
         <h1>{{page.title}}</h1>
     </div>
+    <p class="lead">{{page.description}}</p>
     <ul class="unstyled">
         {{content}}
     </ul>
