I refactored the blog to fix issues with the Jekyll update for GitHub Pages.
GitHub upgraded their Jekyll implementation to 1.0. There were
significant differences in the page generation from the previous
version of Jekyll. I refactored the website to fix the rendering issues.

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,4 +1,4 @@
 <script type="text/javascript" src="/javascript/website.js"></script>
 {% if page.javascript %}
-    <script type="text/javascript" src="javascript/{{page.javascript}}.js"></script>
+    <script type="text/javascript" src="/javascript/{{page.javascript}}.js"></script>
 {% endif %}
