--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@
                         <div class="page-header">
                             <h1>{{page.title}}</h1>
                         </div>
-                        <p class="lead">{{page.description}}</p>
+                        <p class="lead">{{page.excerpt}}</p>
                         <p><span class="author">{{page.author}}</span><br/><time datetime="{{page.date | date:'%Y-%m-%d'}}">{{page.date | date:'%B %d, %Y'}}</time></p>
                         {{content}}
                     </article>
