--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,5 +18,6 @@
         </div>
         {% include footer.html %}
         {% include javascript.html %}
+        {% include disqus_comment_count_javascript.html %}
     </body>
 </html>
