I added code to the footer to print the date and time that the site was generated.
I added code to the footer.html template to output the date and time
that the site was generated by Jekyll. This will help me to see whether
the GitHub Pages site has been updated after I push updates to the
GitHub repository.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,5 +26,6 @@
                 </address>
             </section>
         </div>
+        <p><em>Last update: <time datetime="{{site.time | date_to_xmlschema}}">{{site.time | date:'%B %d, %Y'}} at {{site.time | date:'%I:%M:%S %p %Z'}}</time></em></p>
     </div>
 </footer>
