I created the Presentations page for the website.
I integrated Reveal.js into the website. I created the index page for
the presentations. I started to create the Using OutputDebugString
presentation.

--- a/_includes/navigation_bar.html
+++ b/_includes/navigation_bar.html
@@ -33,6 +33,7 @@
                             <li><a href="#">Project 3</a></li>
                         </ul>
                     </li>
+                    <li class="{{presentationsClass}}"><a href="/presentations/">Presentations</a></li>
                     <li class="{{aboutMeClass}}"><a href="/about-me.html">About Me</a></li>
                 </ul>
                 <p class="navbar-text hidden-desktop">Contact Me:</p>
