--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
         <meta name="og:url" content="http://www.michaelfcollins3.me{{page.url}}"/>
         <meta name="og:description" content="{{page.description}}"/>
         <meta name="og:published_time" content="{{page.date | date:'%Y-%m-%d'}}"/>
-        {% if page.modifiedDate %}
+        {% if page.modified_time %}
         <meta name="og:modified_time" content="{{page.modified_time | date:'%Y-%m-%d'}}"/>
         {% endif %}
         <meta name="og:author:first_name" content="{{page.author_first_name}}"/>
