I fixed a rendering problem due to Reveal.js.
There was a rendering problem because of conflicting CSS with the
Reveal.js CSS stylesheet. I removed the CSS for reveal.js from the
normal theme and modified the Rakefile script to copy reveal.min.css
into the css directory. I changed the presentation template to include
the reveal.min.css stylesheet.

--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -5,6 +5,7 @@
 	<title>{{page.title}} - {{site.brand}}</title>
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml"/>
 	<link rel="stylesheet" href="/css/{{site.theme}}.css"/>
+	<link rel="stylesheet" href="/css/reveal.js/reveal.min.css"/>
 	{% if page.theme %}
 	<link rel="stylesheet" href="/css/reveal.js/theme/{{page.theme}}.css" id="theme">
 	{% else %}
