I fixed the Presentations link in the navigation bar.
The Presentations link was not showing active status when the user was
viewing presentations. I fixed the template code that assigns active
status to the navigation bar links.

--- a/_includes/navigation_bar.html
+++ b/_includes/navigation_bar.html
@@ -10,6 +10,8 @@
 {% assign aboutMeClass = 'active' %}
 {% when 'events.html' %}
 {% assign eventsClass = 'active' %}
+{% when 'presentations' %}
+{% assign presentationsClass = 'active' %}
 {% endcase %}
 <nav id="navigationBar" class="navbar navbar-fixed-top">
     <div class="navbar-inner">
