--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/css/{{site.theme}}.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     {% if page.rss %}
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{page.rss}}"/>
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.imaginaryrealities.com/blog/{{page.rss}}.xml"/>
     {% endif %}
     <meta name="description" content="{{page.description}}"/>
     {% include google_analytics.html %}
